- [core] The package containing the concepts related to the editing context has been renamed to remove references to the project
- https://github.com/eclipse-sirius/sirius-components/issues/932[#932] [graphql] Introduce the RepresentationMetadata concept in order to prepare the separation of the metadata from the representation
- [core] Sirius Components does not depend on Spring Security anymore

=== Dependency update

- [core] Switch to Spring Boot 2.6.1
- [core] Switch to GraphQL Java 17.3
- [compatibility] Switch to Sirius Desktop 6.6.0
- [frontend] Switch to @xstate/react 1.6.3
- [frontend] Switch to typescript 4.5.4
- [frontend] Switch to @typescript-eslint/parser 5.7.0
- [frontend] Switch to xstate 4.26.1
- [frontend] Update various development dependencies such as Rollup, ESLint, Pretier and Jest

=== New features

- https://github.com/eclipse-sirius/sirius-components/issues/726[#726] [view] Nodes can now have a dynamically computed size (using `sizeComputationExpression`) which depends on the current state of the semantic model.
If the expression is present and produces a positive integer, it will be used as both the width and height of the node, in pixels.
Currently it is not possible to compute different values for width and height.
- https://github.com/eclipse-sirius/sirius-components/issues/133[#133] [diagram] Add a connector tool to help create edges in diagrams
- https://github.com/eclipse-sirius/sirius-components/issues/596[#596] [view] It is now possible to define border nodes in dynamic diagram definitions
- https://github.com/eclipse-sirius/sirius-components/issues/132[#132] [diagram] Add support for drag and drop from the explorer to a diagram
- https://github.com/eclipse-sirius/sirius-components/issues/924[#924] [view] Add support for all text styles on labels
- https://github.com/eclipse-sirius/sirius-components/issues/929[#929] [core] Add support for providing a listener on GraphQLWebSocketHandler operations
