@@ -1,51 +1,0 @@
-/*******************************************************************************
- * Copyright (c) 2019, 2020 Obeo.
- * This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v2.0
- * which accompanies this distribution, and is available at
- * https://www.eclipse.org/legal/epl-2.0/
- *
- * SPDX-License-Identifier: EPL-2.0
- *
- * Contributors:
- *     Obeo - initial API and implementation
- *******************************************************************************/
-.toolbar {
-  background: #fafafa;
-  border: 1px solid #d1dadb;
-  box-shadow: 0px 2px 5px #002b3c40;
-  border-radius: 2px;
-  display: grid;
-  grid-template-rows: 8px 24px 8px;
-  grid-template-columns: 8px 1fr 8px;
-  color: #002d37;
-  position: fixed;
-  z-index: 2;
-}
-
-.toolEntries {
-  grid-column-start: 1;
-  grid-column-start: 2;
-  grid-row-start: 1;
-  grid-row-start: 2;
-  display: flex;
-}
-
-.toolEntry {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 0px 0 8px;
-}
-
-.toolSectionEntry {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.toolbarClose {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
